--- a/src/View/SeletorObjetos.form
+++ b/src/View/SeletorObjetos.form
@@ -865,6 +865,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Nome"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfNomePoligonoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btDeletar">
       <Properties>
